[serve] update get_application_url and tests (#54449)
This PR replaces some of the manual string literals of urls within
`test_api`, `test_deploy`, `test_deploy_2`, `test_deploy_app`,
`test_failure` with `get_application_urls` and splits some of the tests
into separate files.

---------

Signed-off-by: doyoung <doyoung@anyscale.com>
Signed-off-by: Alexey Kudinkin <ak@anyscale.com>
Signed-off-by: Linkun <github@lkchen.net>
Signed-off-by: Kourosh Hakhamaneshi <kourosh@anyscale.com>
Signed-off-by: Kevin H. Luu <kevin@anyscale.com>
Signed-off-by: kevin <kevin@anyscale.com>
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>
Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: dayshah <dhyey2019@gmail.com>
Signed-off-by: You-Cheng Lin (Owen) <mses010108@gmail.com>
Signed-off-by: Edward Oakes <ed.nmi.oakes@gmail.com>
Signed-off-by: Srinath Krishnamachari <srinath.krishnamachari@anyscale.com>
Signed-off-by: srinathk10 <68668616+srinathk10@users.noreply.github.com>
Signed-off-by: noemotiovon <757486878@qq.com>
Signed-off-by: Ryan O'Leary <ryanaoleary@google.com>
Signed-off-by: Cindy Zhang <cindyzyx9@gmail.com>
Signed-off-by: Hao Chen <chenh1024@gmail.com>
Signed-off-by: Timothy Seah <tseah@anyscale.com>
Signed-off-by: Timothy Seah <timothy.seah777@yahoo.com>
Signed-off-by: Vignesh Hirudayakanth <vigneshkanth@gmail.com>
Signed-off-by: Balaji Veeramani <bveeramani@berkeley.edu>
Co-authored-by: Alexey Kudinkin <ak@anyscale.com>
Co-authored-by: Linkun <github@lkchen.net>
Co-authored-by: kourosh hakhamaneshi <31483498+kouroshHakha@users.noreply.github.com>
Co-authored-by: Qiaolin Yu <liin1211@outlook.com>
Co-authored-by: Kevin H. Luu <kevin@anyscale.com>
Co-authored-by: Elliot Barnwell <elliot.barnwell@anyscale.com>
Co-authored-by: Lonnie Liu <95255098+aslonnie@users.noreply.github.com>
Co-authored-by: harshit-anyscale <harshit@anyscale.com>
Co-authored-by: Dhyey Shah <dhyey2019@gmail.com>
Co-authored-by: Owen Lin (You-Cheng Lin) <106612301+owenowenisme@users.nor

--- a/python/ray/serve/tests/BUILD
+++ b/python/ray/serve/tests/BUILD
@@ -214,6 +214,7 @@ py_test_module_list(
     size = "large",
     files = [
         "test_api.py",
+        "test_api_2.py",
         "test_model_composition.py",
     ],
     tags = [
@@ -253,6 +254,7 @@ py_test(
     size = "large",
     srcs = [
         "test_api.py",
+        "test_api_2.py",
         "test_controller_crashes.py",
         "test_failure.py",
     ],
