[Serve.llm] Make llm serve endpoints compatible with vLLM serve frontend (1/N): Remove random v0 logic (#54440)
Signed-off-by: Kourosh Hakhamaneshi <kourosh@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4245,7 +4245,7 @@
   run:
     timeout: 3600
     long_running: false
-    script: python run_llm_serve_test_and_bms.py --serve-config-file configs/serve_llama_3dot1_8b_lora.yaml
+    script: python run_llm_serve_test_and_bms.py --serve-config-file configs/serve_llama_3dot1_8b_lora.yaml --timeout 900
 
 - name: llm_serve_llama_3dot2_1B_s3
   frequency: nightly
@@ -4277,8 +4277,6 @@
   cluster:
     byod:
       type: llm-cu128
-      runtime_env:
-        - VLLM_USE_V1=1
     cluster_compute: llm_four_L4_gpu_head_node.yaml
     # NOTE: Important for getting the correct secrets
     cloud_id: cld_wy5a6nhazplvu32526ams61d98
@@ -4298,8 +4296,6 @@
   cluster:
     byod:
       type: llm-cu128
-      runtime_env:
-        - VLLM_USE_V1=1
     cluster_compute: llm_four_L4_gpu_head_node.yaml
     # NOTE: Important for getting the correct secrets
     cloud_id: cld_wy5a6nhazplvu32526ams61d98
