[release] remove dask from byod 3.9 deps (#54521)
required to run release tests

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/release/ray_release/byod/requirements_byod_3.9.in
+++ b/release/ray_release/byod/requirements_byod_3.9.in
@@ -6,7 +6,6 @@ boto3
 cmake
 crc32c
 cython
-dask[complete]
 fastapi
 gcsfs==2023.5.0
 gsutil
@@ -39,3 +38,4 @@ typing-extensions
 xarray
 xgboost
 zarr
+pyyaml
