--- a/ci/raydepsets/BUILD.bazel
+++ b/ci/raydepsets/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
 
 py_library(
     name = "raydepsets_lib",
@@ -13,20 +14,22 @@ py_library(
 py_binary(
     name = "raydepsets",
     srcs = ["raydepsets.py"],
-    deps = [":raydepsets_lib"],
     exec_compatible_with = ["//:hermetic_python"],
+    deps = [":raydepsets_lib"],
 )
 
 py_test(
     name = "test_cli",
-    srcs = ["tests/test_cli.py"],
+    srcs = ["test_cli.py"],
+    data = ["@uv_x86_64//:file"],
     exec_compatible_with = ["//:hermetic_python"],
-    deps = [
-        ci_require("pytest"),
-        ":raydepsets_lib",
-    ],
     tags = [
         "ci_unit",
         "team:ci",
+    ],
+    deps = [
+        ci_require("bazel-runfiles"),
+        ci_require("pytest"),
+        ":raydepsets_lib",
     ],
 )
