[Data] Add Expression Support & with_columns API (#54322)
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/python/ray/data/BUILD
+++ b/python/ray/data/BUILD
@@ -298,6 +298,20 @@ py_test(
 )
 
 py_test(
+    name = "test_expressions",
+    size = "small",
+    srcs = ["tests/test_expressions.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
     name = "test_avro",
     size = "small",
     srcs = ["tests/test_avro.py"],
