--- a/.buildkite/release-automation/pre_release.rayci.yml
+++ b/.buildkite/release-automation/pre_release.rayci.yml
@@ -47,8 +47,9 @@ steps:
       branch: "${BUILDKITE_BRANCH}"
       message: "Triggered by release-automation build #${BUILDKITE_BUILD_NUMBER}"
       env:
-        RAYCI_RELEASE: 1
+        RAYCI_RELEASE: "1"
         RAYCI_SCHEDULE: "nightly"
+        RAYCI_DISABLE_TEST_DB: "1"
 
   - label: "Check Ray commit in {{matrix}} nightly images"
     key: check-ray-commit
@@ -72,7 +73,7 @@ steps:
       env:
         # KubeRay CI will pull an image based on this commit and the current date
         RAY_NIGHTLY_COMMIT: "${BUILDKITE_COMMIT}"
-        IS_FROM_RAY_RELEASE_AUTOMATION: 1
+        IS_FROM_RAY_RELEASE_AUTOMATION: "1"
 
   - label: "Trigger Postmerge MacOS test"
     key: trigger-postmerge-macos
