--- a/ci/raydepsets/BUILD.bazel
+++ b/ci/raydepsets/BUILD.bazel
@@ -5,9 +5,13 @@ py_library(
     name = "raydepsets_lib",
     srcs = [
         "cli.py",
+        "workspace.py",
     ],
+    data = ["@uv_x86_64//:file"],
     deps = [
+        ci_require("bazel-runfiles"),
         ci_require("click"),
+        ci_require("pyyaml"),
     ],
 )
 
@@ -21,14 +25,15 @@ py_binary(
 py_test(
     name = "test_cli",
     srcs = ["test_cli.py"],
-    data = ["@uv_x86_64//:file"],
+    data = [
+        "test_data/test.config.yaml",
+    ],
     exec_compatible_with = ["//:hermetic_python"],
     tags = [
         "ci_unit",
         "team:ci",
     ],
     deps = [
-        ci_require("bazel-runfiles"),
         ci_require("pytest"),
         ":raydepsets_lib",
     ],
