[train] update `datasets` from `2.19.1` to `3.6.0` (#54338)
This fixes an issue in lower versions of `datasets` when trying to call
`load_datasets`.

### Changes
1. Bump `datasets` to `3.6.0`.
2. Bump other dependencies needed to make this work.
3. Recompile dependencies.
4. Update examples to use the new APIs.
5. Disable the huggingface test for `pyarrow v9` because the pinned
`datasets` version is explicitly incompatible.
6. Unpin dependencies introduced in the
https://github.com/ray-project/ray/pull/54425 stop-gap, and rely on the
global dependencies instead.

### Example

**Repro:**
```python
from datasets import load_dataset
load_dataset("tiny_shakespeare")
```

**Bad:**
```bash
(base) ray@ip-10-0-98-222:~/default$ pip install -q "datasets==3.0.1"
Successfully registered `datasets` package to be installed on all cluster nodes.
View and update dependencies here: https://console.anyscale-staging.com/cld_kvedZWag2qA8i5BjxUevf5i7/prj_92c7b71w55flm6gv6imv4m6vqg/workspaces/expwrk_hzadb7trab42qwqk8yumcx8tf2?workspace-tab=dependencies
(base) ray@ip-10-0-98-222:~/default$ python repro.py
Traceback (most recent call last):
  File "/home/ray/default/repro.py", line 2, in <module>
    load_dataset("tiny_shakespeare")
  File "/home/ray/anaconda3/lib/python3.9/site-packages/datasets/load.py", line 2074, in load_dataset
    builder_instance = load_dataset_builder(
  File "/home/ray/anaconda3/lib/python3.9/site-packages/datasets/load.py", line 1795, in load_dataset_builder
    dataset_module = dataset_module_factory(
  File "/home/ray/anaconda3/lib/python3.9/site-packages/datasets/load.py", line 1671, in dataset_module_factory
    raise e1 from None
  File "/home/ray/anaconda3/lib/python3.9/site-packages/datasets/load.py", line 1617, in dataset_module_factory
    can_load_config_from_parquet_export = "DEFAULT_CONFIG_NAME" not in f.read()
  File "/home/ray/anaconda3/lib/python3.9/codecs.py", line 322, in decode
    (result, consumed) = self._buffer_decode(data, self.errors, fin

--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -52,7 +52,6 @@ aiohttp==3.11.16
     #   -r python/requirements/test-requirements.txt
     #   aiobotocore
     #   aiohttp-cors
-    #   datasets
     #   delta-sharing
     #   fsspec
     #   google-auth
@@ -381,7 +380,7 @@ dask==2023.6.1 ; python_version < "3.12"
     #   distributed
 databricks-sdk==0.52.0
     # via mlflow-skinny
-datasets==2.19.1
+datasets==3.6.0
     # via
     #   -r python/requirements/ml/data-test-requirements.txt
     #   -r python/requirements/ml/train-requirements.txt
@@ -1237,7 +1236,6 @@ numpy==1.26.4
     #   patsy
     #   pettingzoo
     #   prophet
-    #   pyarrow
     #   pylance
     #   pymars
     #   pyro-ppl
@@ -1546,7 +1544,7 @@ py-spy==0.4.0 ; python_version < "3.12"
     # via -r python/requirements.txt
 py4j==0.10.9.7
     # via pyspark
-pyarrow==14.0.2
+pyarrow==19.0.1
     # via
     #   -r python/requirements.txt
     #   dask
@@ -1561,9 +1559,7 @@ pyarrow==14.0.2
     #   raydp
     #   triad
 pyarrow-hotfix==0.7
-    # via
-    #   datasets
-    #   hudi
+    # via hudi
 pyasn1==0.5.1
     # via
     #   oauth2client
@@ -2270,7 +2266,7 @@ tornado==6.1 ; python_version < "3.12"
     #   notebook
     #   pymars
     #   terminado
-tqdm==4.64.1
+tqdm==4.67.1
     # via
     #   -r python/requirements/cloud-requirements.txt
     #   -r python/requirements/test-requirements.txt
