--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4445,6 +4445,31 @@
       cluster:
         cluster_compute: ci/gce.yaml  # relative to working_dir
 
+- name: mcp_ray_serve  # do not use dashes (regex sensitive)
+  frequency: weekly
+  python: "3.11"
+  group: ray-examples
+  team: ml
+  working_dir: //doc/source/ray-overview/examples/mcp-ray-serve  # use // to access from repo's root
+
+  cluster:
+    byod:
+      type: llm-cu128  # anyscale/ray-llm:<PR_RAY_VERSION>-py311-cu128
+      post_build_script: byod_mcp-ray-serve.sh  # release/ray_release/byod/
+    cluster_compute: ci/aws.yaml  # relative to working_dir
+
+  run:
+    timeout: 3600
+    script: bash ci/tests.sh  # relative to working_dir
+
+  variations:
+    - __suffix__: aws  # uses default specs above
+    - __suffix__: gce
+      env: gce
+      frequency: manual
+      cluster:
+        cluster_compute: ci/gce.yaml  # relative to working_dir
+
 - name: distributing_pytorch  # do not use dashes (regex sensitive)
   frequency: weekly
   group: ray-examples
