--- a/release/llm_tests/serve/configs/serve_llama_3dot1_8b_quantized_tp1_2p6d.yaml
+++ b/release/llm_tests/serve/configs/serve_llama_3dot1_8b_quantized_tp1_2p6d.yaml
@@ -7,6 +7,7 @@ applications:
         engine_kwargs:
           max_model_len: 8192
           tensor_parallel_size: 1
+          enforce_eager: true
         deployment_config:
           autoscaling_config:
             min_replicas: 2
@@ -18,6 +19,7 @@ applications:
         engine_kwargs:
           max_model_len: 8192
           tensor_parallel_size: 1
+          enforce_eager: true
         deployment_config:
           autoscaling_config:
             min_replicas: 6
