[core][oneevent/01] gcs AddEvent: scaffolding (#54609)
This is a series of PRs that connects each worker's EventAggregator to
GCS, completing the OneEvent implementation for task events.
For more details, see:
https://docs.google.com/document/d/1WjdlKprMqLqyPvmR1OGRQNhCD93SWrCXj21jZXXUcSk/edit?tab=t.0#heading=h.mmmgp2sapmts.

------------

This PR specifically adds a new gRPC endpoint, AddEvent, to GCS,
allowing the EventAggregator to send Ray task events.

Test:
- CI
- build

Signed-off-by: Cuong Nguyen <can@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/src/ray/protobuf/BUILD
+++ b/src/ray/protobuf/BUILD
@@ -161,6 +161,7 @@ proto_library(
     srcs = ["gcs_service.proto"],
     deps = [
         ":common_proto",
+        ":events_event_aggregator_service_proto",
         ":gcs_proto",
         ":pubsub_proto",
     ],
