--- a/src/ray/gcs/gcs_server/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/BUILD.bazel
@@ -162,6 +162,7 @@ ray_cc_library(
         "//src/ray/common:status",
         "//src/ray/gcs:gcs_pb_util",
         "//src/ray/protobuf:gcs_cc_proto",
+        "//src/ray/protobuf:events_event_aggregator_service_cc_proto",
         "//src/ray/util:counter_map",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
