--- a/src/ray/object_manager/plasma/BUILD.bazel
+++ b/src/ray/object_manager/plasma/BUILD.bazel
@@ -41,6 +41,7 @@ ray_cc_library(
         "//src/ray/common:ray_config",
         "//src/ray/common:ray_object",
         "//src/ray/common:status",
+        "//src/ray/common:status_or",
         "//src/ray/object_manager:object_manager_common",
         "//src/ray/protobuf:common_cc_proto",
         "//src/ray/util",
