[ci] updating pre commit config - updating buildifier paths (#54593)
Updates to buildifier pre-commit hook:

- adding ci & release paths
- including BAZEL.build files for lint

---------

Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,9 +84,11 @@ repos:
     rev: 8.0.1
     hooks:
       - id: buildifier
-        files: ^(src|cpp|python|rllib)(/[^/]+)*/BUILD$
+        files: ^(src|cpp|python|rllib|ci|release)(/[^/]+)*/BUILD(\.bazel)?$
+        exclude: ^(cpp/example/.*)$
       - id: buildifier-lint
-        files: ^(src|cpp|python|rllib)(/[^/]+)*/BUILD$
+        files: ^(src|cpp|python|rllib|ci|release)(/[^/]+)*/BUILD(\.bazel)?$
+        exclude: ^(cpp/example/.*)$
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
