--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -1,6 +1,8 @@
 # Bazel build
 # C/C++ documentation: https://docs.bazel.build/versions/master/be/c-cpp.html
 
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
+load("@rules_python//python:defs.bzl", "py_test")
 load("//bazel:python.bzl", "py_test_module_list")
 load("//bazel:ray.bzl", "COPTS")
 
@@ -30,7 +32,6 @@ cc_binary(
 cc_library(
     name = "ray_api_lib",
     srcs = glob([
-        "src/ray/api.cc",
         "src/ray/api/*.cc",
         "src/ray/api/*.h",
         "src/ray/app/*.cc",
@@ -89,9 +90,9 @@ cc_library(
 
 cc_binary(
     name = "default_worker",
-    srcs = glob([
+    srcs = [
         "src/ray/worker/default_worker.cc",
-    ]),
+    ],
     copts = COPTS,
     linkstatic = True,
     deps = select({
@@ -218,8 +219,9 @@ cc_test(
 
 cc_test(
     name = "cluster_mode_xlang_test",
-    srcs = glob([
+    srcs = [
         "src/ray/test/cluster/cluster_mode_xlang_test.cc",
+    ] + glob([
         "src/ray/test/cluster/*.h",
     ]),
     args = [
@@ -285,9 +287,9 @@ cc_binary(
 
 cc_test(
     name = "simple_kv_store",
-    srcs = glob([
+    srcs = [
         "src/ray/test/examples/simple_kv_store.cc",
-    ]),
+    ],
     args = [
         "--ray_code_search_path=$(location simple_kv_store.so)",
         "--ray_head_args '--include-dashboard false'",
@@ -306,9 +308,9 @@ cc_test(
 cc_binary(
     name = "simple_kv_store.so",
     testonly = True,
-    srcs = glob([
+    srcs = [
         "src/ray/test/examples/simple_kv_store.cc",
-    ]),
+    ],
     copts = COPTS,
     linkopts = ["-shared"],
     linkstatic = True,
@@ -356,9 +358,9 @@ cc_binary(
 
 cc_test(
     name = "metric_example",
-    srcs = glob([
+    srcs = [
         "src/ray/test/examples/metric_example.cc",
-    ]),
+    ],
     args = [
         "--ray_code_search_path $(location metric_example.so)",
     ],
@@ -381,9 +383,9 @@ cc_test(
 cc_binary(
     name = "metric_example.so",
     testonly = True,
-    srcs = glob([
+    srcs = [
         "src/ray/test/examples/metric_example.cc",
-    ]),
+    ],
     linkopts = ["-shared"],
     linkstatic = True,
     deps = [
