--- a/src/ray/raylet_client/BUILD.bazel
+++ b/src/ray/raylet_client/BUILD.bazel
@@ -1,6 +1,9 @@
 load("//bazel:ray.bzl", "ray_cc_library")
 
-exports_files(["raylet_connection.h", "raylet_client.h"])
+exports_files([
+    "raylet_connection.h",
+    "raylet_client.h",
+])
 
 ray_cc_library(
     name = "raylet_client_connection_lib",
