deflake test metrics 2 (#54697)
fixes https://anyscale1.atlassian.net/browse/SERVE-959 more context
there

Signed-off-by: abrar <abrar@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/python/ray/serve/tests/BUILD
+++ b/python/ray/serve/tests/BUILD
@@ -191,6 +191,7 @@ py_test_module_list(
 # Run serially on Windows.
 py_test_module_list(
     size = "medium",
+    timeout = "long",
     files = [
         "test_deploy_app.py",
         "test_deploy_app_2.py",
