[data] Increase test join size (#54716)
Signed-off-by: Matthew Owen <mowen@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/python/ray/data/BUILD
+++ b/python/ray/data/BUILD
@@ -397,7 +397,7 @@ py_test(
 
 py_test(
     name = "test_join",
-    size = "medium",
+    size = "large",
     srcs = ["tests/test_join.py"],
     tags = [
         "data_non_parallel",
