[cpp] add a bazel rule that exports boost headers (#54737)
so that they can be used for building the cpp ray package, without using
local genrules

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -143,6 +143,7 @@ genrule(
         "libray_api.so",
         "@msgpack//:msgpack_hdrs",
         "@nlohmann_json//:nlohmann_json_hdrs",
+        "@boost//:boost_ray_hdrs",
     ],
     outs = ["ray_cpp_pkg.out"],
     cmd = """
